# kube-rust

./: Cargo.toml  README.md
docs/: AdmissionregistrationApi.md  AdmissionregistrationV1alpha1AdmissionHookClientConfig.md  AdmissionregistrationV1alpha1Api.md  AdmissionregistrationV1alpha1ExternalAdmissionHook.md  AdmissionregistrationV1alpha1ExternalAdmissionHookConfiguration.md  AdmissionregistrationV1alpha1ExternalAdmissionHookConfigurationList.md  AdmissionregistrationV1alpha1Initializer.md  AdmissionregistrationV1alpha1InitializerConfiguration.md  AdmissionregistrationV1alpha1InitializerConfigurationList.md  AdmissionregistrationV1alpha1Rule.md  AdmissionregistrationV1alpha1RuleWithOperations.md  AdmissionregistrationV1alpha1ServiceReference.md  ApiregistrationApi.md  ApiregistrationV1beta1Api.md  ApisApi.md  AppsApi.md  AppsV1beta1Api.md  AppsV1beta1ControllerRevision.md  AppsV1beta1ControllerRevisionList.md  AppsV1beta1Deployment.md  AppsV1beta1DeploymentCondition.md  AppsV1beta1DeploymentList.md  AppsV1beta1DeploymentRollback.md  AppsV1beta1DeploymentSpec.md  AppsV1beta1DeploymentStatus.md  AppsV1beta1DeploymentStrategy.md  AppsV1beta1RollbackConfig.md  AppsV1beta1RollingUpdateDeployment.md  AppsV1beta1RollingUpdateStatefulSetStrategy.md  AppsV1beta1Scale.md  AppsV1beta1ScaleSpec.md  AppsV1beta1ScaleStatus.md  AppsV1beta1StatefulSet.md  AppsV1beta1StatefulSetList.md  AppsV1beta1StatefulSetSpec.md  AppsV1beta1StatefulSetStatus.md  AppsV1beta1StatefulSetUpdateStrategy.md  AuthenticationApi.md  AuthenticationV1Api.md  AuthenticationV1TokenReview.md  (+360 more)
src/apis/: mod.rs  (+41 more)
(+363 files in other folders)
