[package]
name = "kube_rust"
version = "1.0.0"
description = "OpenAPI generated Rust library for Kubernetes"
readme = "README.md"
repository = "https://github.com/avranju/kube-rust"
license = "MIT"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]

[lib]
name = "kube_rust"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.16"
hyper = "0.11.6"
url = "1.5"

[dev-dependencies]
tokio-core = "*"
